Fixed some spacing with the newsletter section for the paragraph and the button

--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -30,3 +30,7 @@ h4 {
     color: #ffbf48;
     margin: 0;
 }
+
+.category {
+    font-size: 18px;
+}
