--- a/scss/_newsletter_section.scss
+++ b/scss/_newsletter_section.scss
@@ -48,8 +48,8 @@ label {
 
 .newsletter__subscribe_bttn {
     padding: 16px;
-    padding-inline-start: 115px;
-    padding-inline-end: 115px;
+    padding-inline-start: 105px;
+    padding-inline-end: 105px;
     margin-block-end: 61px;
     margin-block-start: 20px;
     margin-inline-start: -100px;
