--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -33,6 +33,9 @@ h4 {
   color: #ffbf48;
   margin: 0; }
 
+.category {
+  font-size: 18px; }
+
 .masthead {
   position: relative; }
 
@@ -381,8 +384,8 @@ label {
 
 .newsletter__subscribe_bttn {
   padding: 16px;
-  padding-inline-start: 115px;
-  padding-inline-end: 115px;
+  padding-inline-start: 105px;
+  padding-inline-end: 105px;
   margin-block-end: 61px;
   margin-block-start: 20px;
   margin-inline-start: -100px;
